# Marco-DeepResearch

./: README.md  README_zh.md
Marco-DeepResearch-Family/: README.md  README_zh.md
Marco-DeepResearch-Family/DeepWideSearch/: README.md
Marco-DeepResearch-Family/HSCodeComp/: README.md
Marco-DeepResearch-Family/HSCodeComp/code/: .env.example  .gitignore  README.md  _resources.py  agent_factory.py  analyze_cross_usage.py  batch_reflect.py  batch_test.py  config.yaml  custom_hts_tools.py  eval.py  eval_reflect.py  pyproject.toml  run.py  run.sh  run_reflect.sh
Marco-DeepResearch-Family/HSCodeComp/code/prompts/: gri_rules.md  hscode_reflect.md  hscode_system.md
Marco-DeepResearch-Family/HSCodeComp/code/scripts/: batch_test.sh  eval_compare.sh
Marco-DeepResearch-Family/Marco-Agent-DeepResearch/: README.md
Marco-DeepResearch-Family/Table-as-Search/: README.md  requirements.txt  run_deepsearch_inference.py  run_widesearch_inference.py
Marco-DeepResearch-Family/Table-as-Search/tools/: google_search_tool.py
Marco-DeepResearch-Family/UMEM/: README.md
